--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body class="font-sans">
     <section class="min-h-screen flex justify-center items-center bg-black">
       <div class="max-w-6xl text-light-gray text-center">
-        <p id="textContainer" class="text-8xl"></p>
+        <p id="textContainer" class="text-6xl"></p>
       </div>
     </section>
 
@@ -29,28 +29,28 @@
         <a href="#projects">Projects</a>
       </div>
       <div class="flex justify-center items-center">
-        <div class="mx-auto mt-10 text-center sm:text-left">
-          <p class="text-black text-4xl md:text-6xl lg:text-8xl">
-            Hi, My name is Júlio César
+        <div class="mx-auto mt-10 sm:text-left">
+          <p class="mt-20 text-black text-5xl md:text-6xl lg:text-8xl p-5 font-bold">
+            Hi, my name is Júlio César
           </p>
           <div
             id="typingText"
             class="text-3xl md:text-4xl lg:text-5xl font-bold"
           >
-            <p>and I am <span id="typingEffect" class="typing-red"></span></p>
+            <p class="text-2xl md:text-4xl lg:text-6xl">and I am <span id="typingEffect"></span></p>
           </div>
           <div class="flex justify-center items-center h-screen">
             <div
-              class="container bg-cover bg-center bg-no-repeat size rounded-full flex justify-center items-center ml-auto mr-96 transition-all duration-500"
+              class="container bg-cover bg-center bg-no-repeat size w-full h-auto rounded-full flex justify-center items-center ml-auto mr-auto transition-all duration-500"
             >
-              <div class="btn-magnetic triangle">
-                <span>Contact me</span>
+              <div class="btn-magnetic triangle font-bold text-2xl">
+                <div class="centralizar"><span>Contact me</span></div>
               </div>
-              <div class="btn-magnetic square">
+              <div class="btn-magnetic square font-bold text-2xl">
                 <span>Projects</span>
               </div>
-              <div class="btn-magnetic circle">
-                <span>About me</span>
+              <div class="btn-magnetic circle font-bold text-2xl">
+                <span>About<br>me</span>
               </div>
             </div>
           </div>
