--- a/src/index.html
+++ b/src/index.html
@@ -8,49 +8,61 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.9/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preload" href="styles.css" as="style" />
   </head>
-  <body class="font-sans">
+  <body class="bg-white">
     <section class="min-h-screen flex justify-center items-center bg-black">
       <div class="max-w-6xl text-light-gray text-center">
         <p id="textContainer" class="text-6xl"></p>
+        <div class="flex justify-center mt-96">
+          <i class="fas fa-chevron-circle-down fa-lg"></i>
+        </div>
       </div>
     </section>
-
     <section class="section-second">
-      <div class="btn-hamburger">
-        <!-- Ícone do hambúrguer aqui -->
+      <div class="btn-hamburger" aria-label="Click me!" data-balloon-pos="left">
+        <i class="fas fa-hamburger fa-lg"></i>
       </div>
-      <div class="nav-menu">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <a href="#projects">Projects</a>
+      <div class="nav-menu p-11 flex justify-between">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="aboutme.html">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#projects">Projects</a></li>
+        </ul>
       </div>
       <div class="flex justify-center items-center">
         <div class="mx-auto mt-10 sm:text-left">
-          <p class="mt-20 text-black text-5xl md:text-6xl lg:text-8xl p-5 font-bold">
+          <p
+            class="mt-20 text-black text-5xl md:text-6xl lg:text-8xl p-5 font-bold"
+          >
             Hi, my name is Júlio César
           </p>
           <div
             id="typingText"
             class="text-3xl md:text-4xl lg:text-5xl font-bold"
           >
-            <p class="text-2xl md:text-4xl lg:text-6xl">and I am <span id="typingEffect"></span></p>
+            <p class="text-2xl md:text-4xl lg:text-6xl">
+              and I am <span id="typingEffect"></span>
+            </p>
           </div>
           <div class="flex justify-center items-center h-screen">
             <div
               class="container bg-cover bg-center bg-no-repeat size w-full h-auto rounded-full flex justify-center items-center ml-auto mr-auto transition-all duration-500"
             >
-              <div class="btn-magnetic triangle font-bold text-2xl">
-                <div class="centralizar"><span>Contact me</span></div>
+              <div class="btn-magnetic triangle" aria-label="Send me a mensage!" data-balloon-pos="left">
+                <div class="centralizar"><i class="fas fa-sms fa-lg"></i></div>
               </div>
-              <div class="btn-magnetic square font-bold text-2xl">
-                <span>Projects</span>
+              <div class="btn-magnetic square" aria-label="look my projects" data-balloon-pos="left">
+                <i class="fas fa-list-ul fa-lg" style="color: #ffffff;"></i>
               </div>
-              <div class="btn-magnetic circle font-bold text-2xl">
-                <span>About<br>me</span>
+              <div class="btn-magnetic circle" aria-label="know me" data-balloon-pos="left">
+                <i class="fas fa-user-circle fa-lg"></i>
               </div>
             </div>
           </div>
